--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,10 +506,10 @@
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "logistic_regression_model.fit(X_train,y_train)"
    ]
   },
   {
@@ -521,12 +521,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "testing_predictions = logistic_regression_model.predict(X_test)"
    ]
   },
   {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -553,41 +553,41 @@
        "0.9520479254722232"
       ]
      },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[18663,   102],\n",
-       "       [   56,   563]])"
-      ]
-     },
      "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "# Print the balanced_accuracy score of the model\n",
+    "balanced_accuracy_score(y_test, testing_predictions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18663,   102],\n",
+       "       [   56,   563]], dtype=int64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate a confusion matrix for the model\n",
+    "confusion_matrix(y_test, testing_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, testing_predictions))"
    ]
   },
   {
@@ -622,7 +622,24 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** \n",
+    "\n",
+    "For label 0 (healthy loan):\n",
+    "\n",
+    "The precision is 1.00, which means that when the model predicts a loan as \"healthy,\" it is correct 100% of the time.\n",
+    "The recall is 0.99, which means that the model correctly identifies 99% of the actual \"healthy\" loans.\n",
+    "\n",
+    "For label 1 (high-risk loan):\n",
+    "\n",
+    "The precision is 0.85, which means that when the model predicts a loan as \"high-risk,\" it is correct 85% of the time.\n",
+    "The recall is 0.91, which means that the model correctly identifies 91% of the actual \"high-risk\" loans.\n",
+    "\n",
+    "Overall, the logistic regression model shows strong performance in predicting both healthy loans and high-risk loans. It has high precision and recall for both classes, indicating that it is effective in distinguishing between the two classes. However, the recall for label 1 (high-risk loans) is slightly lower than for label 0 (healthy loans), which means there might be a few false negatives (high-risk loans incorrectly predicted as healthy). However, in highly imbalanced datasets, accuracy alone might not be a reliable metric for model performance. High accuracy can be achieved by a model that heavily favors the majority class, while misclassifying many samples from the minority class.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
