Predict a Logistic Regression Model with Resampled Training Data. Calculate balanced_accuracy score of the model. Generate a confusion matrix for the model and classification report for the model.

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,33 +674,33 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_resampled, y_resampled = random_oversampler.fit_resample(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    56271\n",
        "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled.value_counts()"
    ]
   },
   {
@@ -712,19 +712,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "lr_resampled_model = model.fit(X_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled_pred = lr_resampled_model.predict(X_test)"
    ]
   },
   {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -751,41 +751,41 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_resampled_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[18649,   116],\n",
-       "       [    4,   615]])"
+       "       [    4,   615]], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix(y_test, y_resampled_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_resampled_pred))"
    ]
   },
   {
@@ -820,8 +820,19 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** For label 0 (healthy loan), a precision score of 1.00 and a recall score of 0.99 indicate that the model correctly classified almost all instances of healthy loans (low-risk) without any false positives and with a high true positive rate. This suggests that the model performs very well in identifying healthy loans.\n",
+    "\n",
+    "For label 1 (high-risk loan), a precision score of 0.84 and a recall score of 0.99 suggest that the model performs quite well in identifying high-risk loans. The high recall score of 0.99 means that the model correctly identified a large portion of high-risk loans. However, the precision score of 0.84 indicates that there were some false positives (instances where the model predicted high-risk loans incorrectly).\n",
+    "\n",
+    "Overall, the logistic regression model fitted with oversampled data shows strong performance in predicting both healthy and high-risk loans. It is effective in identifying most instances of both classes, with very few misclassifications."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
